--- a/slides.org
+++ b/slides.org
@@ -84,6 +84,9 @@ filetype plugin indent on
 wc -l .vimrc
 #+END_SRC
 
+#+RESULTS:
+: 297 .vimrc
+
 - You will be faster if your tools apply to your whole workflow.
 - Starting is slow, it eventually pays off.
 
@@ -297,7 +300,7 @@ wc -l .vimrc
 - Use =M-x list-packages= to see the packages available.
 - Use =M-x install-package= to install a package by name.
 
-- Include =(require <package>)= to force Emacs loading the package's functions.
+- Include =(require '<package>)= to force Emacs loading the package's functions.
 - After getting some grip on it, I recommend checking =use-package= for
   building your configuration.
 
